syntax = "proto3";

option csharp_namespace = "BlazorClient.Protos";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Register (RegisterRequest) returns (RegisterReply);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
  string message = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string confirmPassword = 3;
}

message RegisterReply {
  string message = 1;
}
